--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  local_auth: ^1.1.6
   flutter:
     sdk: flutter
   firebase_core:
   cloud_firestore:
   firebase_storage:
-
+  crypto: ^3.0.2
+  geolocator: ^9.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
