--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.linea_de_profundizacion_2">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
         android:label="linea_de_profundizacion_2"
         android:name="${applicationName}"
